Fixed layout issues

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 }
 
 a {
-    padding: 8px;
+    padding: 30px;
     display: inline-block;
 }
 
@@ -38,10 +38,11 @@ a {
 
 .services {
     font-weight: bold;
+    margin-left: 5px;
 }
 
 .servicestitle {
-    margin-left: 5px;
+    margin-left: 15px;
     margin-top: 5em;
 }
 
@@ -61,8 +62,8 @@ img {
     flex-shrink: auto;
     margin-left: auto;
     margin-right: auto;
-    width: 60%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     margin-bottom: 4%;
 }
 
@@ -101,10 +102,6 @@ li:nth-child(2n+1) {
     margin-top: 60px;
 }
 
-input {
-    font-style: normal;
-}
-
 .contactuslink {
     text-align: center;
     font-size: 60px;
@@ -132,10 +129,8 @@ button {
 
 
     .main-page-h1 {
-        font-size: 270%;
-        display: flex;
+        font-size: 200%;
         align-self: auto;
-        border-bottom: 10px black;
     }
 
     nav {
@@ -148,9 +143,7 @@ button {
     .image-top {
         width: auto;
         margin-top: 80px;
-        display: flex;
-        flex-shrink: 1;
-        width: 100%;
+        max-width: 90%;
     }
 
 
@@ -160,11 +153,29 @@ button {
         padding-right: auto;
     }
 
-    .servicestitle {
+    .services {
         width: 100%;
-        text-
+        text-align: center;
+        list-style: none;
+        padding-right: 50px;
     }
 
- 
+    .servicestitle {
+        text-align: center;
+    }
+
+    a {
+        padding: 8px;
+        text-align: center;
+    }
 
 }
+
+@media screen 
+and (min-width: 710px)
+and (max-width: 800px){
+
+    .main-page-h1 {
+          font-size: 300%;
+      }
+  }
